codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"this is a test reason such as one that would be produced by the model           "
"                                                                                "
"▌允许运行命令？                                                                 " Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (14, " ")]
"▌ 是   始终允许   否，提供反馈                                                  " Hidden by multi-width symbols: [(3, " "), (8, " "), (10, " "), (12, " "), (14, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"▌ 批准并运行该命令                                                              " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"                                                                                "
