codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_idle_h2.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"▌ Ask Codex to do anything              "
" ⏎ 发送   ⌃J 换行   ⌃T 对话记录   ⌃C 退 " Hidden by multi-width symbols: [(4, " "), (6, " "), (14, " "), (16, " "), (24, " "), (26, " "), (28, " "), (30, " "), (38, " ")]
