codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_small_running_h2.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
" Thinking (0s • Esc 中断)               " Hidden by multi-width symbols: [(21, " "), (23, " ")]
"▌ Ask Codex to do anything              "
