codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_history_proposed_short.snap
---
source: tui/src/chatwidget/tests.rs
expression: lines_to_single_string(&proposed)
---
• 建议的命令
  └ echo hello world
