codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step2_finish_ls.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• 已探索
  └ 列出 ls -la
